--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,15 +14,10 @@
       "@/*": ["src/*"],
       "@@/*": ["src/.umi/*"]
     },
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "noImplicitAny": false
   },
-  "include": [
-    "mock/**/*",
-    "src/**/*",
-    "config/**/*",
-    ".umirc.ts",
-    "typings.d.ts"
-  ],
+  "include": ["mock/**/*", "src/**/*", "config/**/*", ".umirc.ts", "typings.d.ts", ".eslintrc.js"],
   "exclude": [
     "node_modules",
     "lib",
@@ -32,6 +27,7 @@
     "**/__test__",
     "test",
     "docs",
-    "tests"
+    "tests",
+    "plugins"
   ]
 }
